Use sequenced collection calls
Sequenced collections are new to Java 21, so this commit introduces and takes advantage of them.